Cherry-pick 272085@main (cf2a9868136a). https://bugs.webkit.org/show_bug.cgi?id=260201

REGRESSION(261003@main): [css-contain][css-grid] Size containment is not allowing the track sizing algorithm to distribute extra space to auto tracks
    https://bugs.webkit.org/show_bug.cgi?id=260201
    rdar://problem/113915953

    Reviewed by Brent Fulgham.

    Size containment is supposed to size a box as if it had no content, so
    for the purposes of grid layout this would mean that we would want to
    skip parts of the algorithm that take into consideration the content.

    The "Stretch auto Tracks," portion of the grid track sizing algorithm
    should not be skipped, however, as it has nothing to do with the content
    of the grid. We should be able to distribute any definite free space
    that we computed up to this point.

    * LayoutTests/imported/w3c/web-platform-tests/css/css-contain/contain-inline-size-grid-stretches-auto-rows-expected.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-contain/contain-inline-size-grid-stretches-auto-rows.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-contain/contain-size-grid-stretches-auto-rows-expected.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-contain/contain-size-grid-stretches-auto-rows.html: Added.
    * Source/WebCore/rendering/GridTrackSizingAlgorithm.cpp:
    (WebCore::GridTrackSizingAlgorithm::run):

    Canonical link: https://commits.webkit.org/272085@main